y.output
Nonterminals useless in grammar

   expression_opt


Terminals unused in grammar

   FUNC
   EXPR
   DECLARE
   DECLARES
   STATEMENTS
   STATEMENT
   VARIABLE
   SCOPE
   ASSIGN
   INTEGER
   BOOLEAN
   FLOAT
   DEC_SCALAR
   DEC_CONST
   PARAMETERS
   PARAM_SCALAR
   ARGUMENTS
   UNARY_MINUS
   LOGICAL_NOT
   LOGICAL_AND
   LOGICAL_OR
   CMP_EQ
   CMP_NE
   CMP_LT
   CMP_LE
   CMP_GT
   CMP_GE
   IF_STMT
   IF_ELSE
   CONSTRUCTOR_CALL
   WHILE_LOOP
   PARENTHESIS
   VEC2
   VEC3
   VEC4
   IVEC2
   IVEC3
   IVEC4
   BVEC2
   BVEC3
   BVEC4
   MAT2
   MAT3
   MAT4
   CONST_FLOAT
   FUNCTION_CALL
   DP3
   LIT
   RSQ
   WITHOUT_ELSE
   WITH_ELSE


Rules useless in grammar

   68 expression_opt: expression
   69               | %empty


State 4 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: scope

    2 scope: '{' declarations statements '}'

    3 declarations: declarations declaration
    4             | %empty

    5 declaration: type ID ';'
    6            | type ID '=' expression ';'
    7            | CONST type ID '=' expression ';'
    8            | ';'

    9 statements: statements statement
   10           | %empty

   11 statement: statement_open
   12          | statement_closed

   13 statement_open: IF '(' expression ')' statement
   14               | IF '(' expression ')' statement_closed ELSE statement_open
   15               | WHILE '(' expression ')' statement_open

   16 statement_closed: variable '=' expression ';'
   17                 | scope
   18                 | WHILE '(' expression ')' statement_closed
   19                 | IF '(' expression ')' statement_closed ELSE statement_closed
   20                 | ';'

   21 arguments_opt: arguments
   22              | %empty

   23 arguments: arguments ',' argument
   24          | argument

   25 argument: expression

   26 expression: INT_C
   27           | FLOAT_C
   28           | '-' expression
   29           | expression '+' expression
   30           | expression '-' expression
   31           | expression '*' expression
   32           | expression '/' expression
   33           | expression '^' expression
   34           | TRUE_C
   35           | FALSE_C
   36           | '!' expression
   37           | expression AND expression
   38           | expression OR expression
   39           | expression EQ expression
   40           | expression NEQ expression
   41           | expression '<' expression
   42           | expression LEQ expression
   43           | expression '>' expression
   44           | expression GEQ expression
   45           | '(' expression ')'
   46           | variable
   47           | constructor_call
   48           | function_call

   49 variable: ID
   50         | ID '[' INT_C ']'

   51 constructor_call: type '(' arguments_opt ')'

   52 type: INT_T
   53     | BOOL_T
   54     | FLOAT_T
   55     | VEC2_T
   56     | VEC3_T
   57     | VEC4_T
   58     | IVEC2_T
   59     | IVEC3_T
   60     | IVEC4_T
   61     | BVEC2_T
   62     | BVEC3_T
   63     | BVEC4_T

   64 function_call: function_name '(' arguments_opt ')'

   65 function_name: DP3_F
   66              | LIT_F
   67              | RSQ_F


Terminals, with rules where they appear

$end (0) 0
'!' (33) 36
'(' (40) 13 14 15 18 19 45 51 64
')' (41) 13 14 15 18 19 45 51 64
'*' (42) 31
'+' (43) 29
',' (44) 23
'-' (45) 28 30
'/' (47) 32
';' (59) 5 6 7 8 16 20
'<' (60) 41
'=' (61) 6 7 16
'>' (62) 43
'[' (91) 50
']' (93) 50
'^' (94) 33
'{' (123) 2
'}' (125) 2
error (256)
WHILE (258) 15 18
FLOAT_T (259) 54
INT_T (260) 52
BOOL_T (261) 53
CONST (262) 7
FALSE_C (263) 35
TRUE_C (264) 34
FUNC (265)
IF (266) 13 14 19
ELSE (267) 14 19
AND (268) 37
OR (269) 38
NEQ (270) 40
EQ (271) 39
LEQ (272) 42
GEQ (273) 44
DP3_F (274) 65
LIT_F (275) 66
RSQ_F (276) 67
VEC2_T (277) 55
VEC3_T (278) 56
VEC4_T (279) 57
IVEC2_T (280) 58
IVEC3_T (281) 59
IVEC4_T (282) 60
BVEC2_T (283) 61
BVEC3_T (284) 62
BVEC4_T (285) 63
FLOAT_C (286) 27
INT_C (287) 26 50
ID (288) 5 6 7 49 50
EXPR (289)
DECLARE (290)
DECLARES (291)
STATEMENTS (292)
STATEMENT (293)
VARIABLE (294)
SCOPE (295)
ASSIGN (296)
INTEGER (297)
BOOLEAN (298)
FLOAT (299)
DEC_SCALAR (300)
DEC_CONST (301)
PARAMETERS (302)
PARAM_SCALAR (303)
ARGUMENTS (304)
UNARY_MINUS (305)
LOGICAL_NOT (306)
LOGICAL_AND (307)
LOGICAL_OR (308)
CMP_EQ (309)
CMP_NE (310)
CMP_LT (311)
CMP_LE (312)
CMP_GT (313)
CMP_GE (314)
IF_STMT (315)
IF_ELSE (316)
CONSTRUCTOR_CALL (317)
WHILE_LOOP (318)
PARENTHESIS (319)
VEC2 (320)
VEC3 (321)
VEC4 (322)
IVEC2 (323)
IVEC3 (324)
IVEC4 (325)
BVEC2 (326)
BVEC3 (327)
BVEC4 (328)
MAT2 (329)
MAT3 (330)
MAT4 (331)
CONST_FLOAT (332)
FUNCTION_CALL (333)
DP3 (334)
LIT (335)
RSQ (336)
UMINUS (337)
WITHOUT_ELSE (338)
WITH_ELSE (339)


Nonterminals, with rules where they appear

$accept (102)
    on left: 0
program (103)
    on left: 1, on right: 0
scope (104)
    on left: 2, on right: 1 17
declarations (105)
    on left: 3 4, on right: 2 3
declaration (106)
    on left: 5 6 7 8, on right: 3
statements (107)
    on left: 9 10, on right: 2 9
statement (108)
    on left: 11 12, on right: 9 13
statement_open (109)
    on left: 13 14 15, on right: 11 14 15
statement_closed (110)
    on left: 16 17 18 19 20, on right: 12 14 18 19
arguments_opt (111)
    on left: 21 22, on right: 51 64
arguments (112)
    on left: 23 24, on right: 21 23
argument (113)
    on left: 25, on right: 23 24
expression (114)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    44 45 46 47 48, on right: 6 7 13 14 15 16 18 19 25 28 29 30 31
    32 33 36 37 38 39 40 41 42 43 44 45
variable (115)
    on left: 49 50, on right: 16 46
constructor_call (116)
    on left: 51, on right: 47
type (117)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63, on right: 5 6 7 51
function_call (118)
    on left: 64, on right: 48
function_name (119)
    on left: 65 66 67, on right: 64


State 0

    0 $accept: . program $end

    '{'  shift, and go to state 1

    program  go to state 2
    scope    go to state 3


State 1

    2 scope: '{' . declarations statements '}'

    $default  reduce using rule 4 (declarations)

    declarations  go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: scope .

    $default  reduce using rule 1 (program)


State 4

    2 scope: '{' declarations . statements '}'
    3 declarations: declarations . declaration

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    CONST    shift, and go to state 9
    VEC2_T   shift, and go to state 10
    VEC3_T   shift, and go to state 11
    VEC4_T   shift, and go to state 12
    IVEC2_T  shift, and go to state 13
    IVEC3_T  shift, and go to state 14
    IVEC4_T  shift, and go to state 15
    BVEC2_T  shift, and go to state 16
    BVEC3_T  shift, and go to state 17
    BVEC4_T  shift, and go to state 18
    ';'      shift, and go to state 19

    ';'       [reduce using rule 10 (statements)]
    $default  reduce using rule 10 (statements)

    declaration  go to state 20
    statements   go to state 21
    type         go to state 22


State 5

    0 $accept: program $end .

    $default  accept


State 6

   54 type: FLOAT_T .

    $default  reduce using rule 54 (type)


State 7

   52 type: INT_T .

    $default  reduce using rule 52 (type)


State 8

   53 type: BOOL_T .

    $default  reduce using rule 53 (type)


State 9

    7 declaration: CONST . type ID '=' expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    VEC2_T   shift, and go to state 10
    VEC3_T   shift, and go to state 11
    VEC4_T   shift, and go to state 12
    IVEC2_T  shift, and go to state 13
    IVEC3_T  shift, and go to state 14
    IVEC4_T  shift, and go to state 15
    BVEC2_T  shift, and go to state 16
    BVEC3_T  shift, and go to state 17
    BVEC4_T  shift, and go to state 18

    type  go to state 23


State 10

   55 type: VEC2_T .

    $default  reduce using rule 55 (type)


State 11

   56 type: VEC3_T .

    $default  reduce using rule 56 (type)


State 12

   57 type: VEC4_T .

    $default  reduce using rule 57 (type)


State 13

   58 type: IVEC2_T .

    $default  reduce using rule 58 (type)


State 14

   59 type: IVEC3_T .

    $default  reduce using rule 59 (type)


State 15

   60 type: IVEC4_T .

    $default  reduce using rule 60 (type)


State 16

   61 type: BVEC2_T .

    $default  reduce using rule 61 (type)


State 17

   62 type: BVEC3_T .

    $default  reduce using rule 62 (type)


State 18

   63 type: BVEC4_T .

    $default  reduce using rule 63 (type)


State 19

    8 declaration: ';' .

    $default  reduce using rule 8 (declaration)


State 20

    3 declarations: declarations declaration .

    $default  reduce using rule 3 (declarations)


State 21

    2 scope: '{' declarations statements . '}'
    9 statements: statements . statement

    WHILE  shift, and go to state 24
    IF     shift, and go to state 25
    ID     shift, and go to state 26
    '{'    shift, and go to state 1
    '}'    shift, and go to state 27
    ';'    shift, and go to state 28

    scope             go to state 29
    statement         go to state 30
    statement_open    go to state 31
    statement_closed  go to state 32
    variable          go to state 33


State 22

    5 declaration: type . ID ';'
    6            | type . ID '=' expression ';'

    ID  shift, and go to state 34


State 23

    7 declaration: CONST type . ID '=' expression ';'

    ID  shift, and go to state 35


State 24

   15 statement_open: WHILE . '(' expression ')' statement_open
   18 statement_closed: WHILE . '(' expression ')' statement_closed

    '('  shift, and go to state 36


State 25

   13 statement_open: IF . '(' expression ')' statement
   14               | IF . '(' expression ')' statement_closed ELSE statement_open
   19 statement_closed: IF . '(' expression ')' statement_closed ELSE statement_closed

    '('  shift, and go to state 37


State 26

   49 variable: ID .
   50         | ID . '[' INT_C ']'

    '['  shift, and go to state 38

    $default  reduce using rule 49 (variable)


State 27

    2 scope: '{' declarations statements '}' .

    $default  reduce using rule 2 (scope)


State 28

   20 statement_closed: ';' .

    $default  reduce using rule 20 (statement_closed)


State 29

   17 statement_closed: scope .

    $default  reduce using rule 17 (statement_closed)


State 30

    9 statements: statements statement .

    $default  reduce using rule 9 (statements)


State 31

   11 statement: statement_open .

    $default  reduce using rule 11 (statement)


State 32

   12 statement: statement_closed .

    $default  reduce using rule 12 (statement)


State 33

   16 statement_closed: variable . '=' expression ';'

    '='  shift, and go to state 39


State 34

    5 declaration: type ID . ';'
    6            | type ID . '=' expression ';'

    ';'  shift, and go to state 40
    '='  shift, and go to state 41


State 35

    7 declaration: CONST type ID . '=' expression ';'

    '='  shift, and go to state 42


State 36

   15 statement_open: WHILE '(' . expression ')' statement_open
   18 statement_closed: WHILE '(' . expression ')' statement_closed

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 43
    TRUE_C   shift, and go to state 44
    DP3_F    shift, and go to state 45
    LIT_F    shift, and go to state 46
    RSQ_F    shift, and go to state 47
    VEC2_T   shift, and go to state 10
    VEC3_T   shift, and go to state 11
    VEC4_T   shift, and go to state 12
    IVEC2_T  shift, and go to state 13
    IVEC3_T  shift, and go to state 14
    IVEC4_T  shift, and go to state 15
    BVEC2_T  shift, and go to state 16
    BVEC3_T  shift, and go to state 17
    BVEC4_T  shift, and go to state 18
    FLOAT_C  shift, and go to state 48
    INT_C    shift, and go to state 49
    ID       shift, and go to state 26
    '-'      shift, and go to state 50
    '!'      shift, and go to state 51
    '('      shift, and go to state 52

    expression        go to state 53
    variable          go to state 54
    constructor_call  go to state 55
    type              go to state 56
    function_call     go to state 57
    function_name     go to state 58


State 37

   13 statement_open: IF '(' . expression ')' statement
   14               | IF '(' . expression ')' statement_closed ELSE statement_open
   19 statement_closed: IF '(' . expression ')' statement_closed ELSE statement_closed

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 43
    TRUE_C   shift, and go to state 44
    DP3_F    shift, and go to state 45
    LIT_F    shift, and go to state 46
    RSQ_F    shift, and go to state 47
    VEC2_T   shift, and go to state 10
    VEC3_T   shift, and go to state 11
    VEC4_T   shift, and go to state 12
    IVEC2_T  shift, and go to state 13
    IVEC3_T  shift, and go to state 14
    IVEC4_T  shift, and go to state 15
    BVEC2_T  shift, and go to state 16
    BVEC3_T  shift, and go to state 17
    BVEC4_T  shift, and go to state 18
    FLOAT_C  shift, and go to state 48
    INT_C    shift, and go to state 49
    ID       shift, and go to state 26
    '-'      shift, and go to state 50
    '!'      shift, and go to state 51
    '('      shift, and go to state 52

    expression        go to state 59
    variable          go to state 54
    constructor_call  go to state 55
    type              go to state 56
    function_call     go to state 57
    function_name     go to state 58


State 38

   50 variable: ID '[' . INT_C ']'

    INT_C  shift, and go to state 60


State 39

   16 statement_closed: variable '=' . expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 43
    TRUE_C   shift, and go to state 44
    DP3_F    shift, and go to state 45
    LIT_F    shift, and go to state 46
    RSQ_F    shift, and go to state 47
    VEC2_T   shift, and go to state 10
    VEC3_T   shift, and go to state 11
    VEC4_T   shift, and go to state 12
    IVEC2_T  shift, and go to state 13
    IVEC3_T  shift, and go to state 14
    IVEC4_T  shift, and go to state 15
    BVEC2_T  shift, and go to state 16
    BVEC3_T  shift, and go to state 17
    BVEC4_T  shift, and go to state 18
    FLOAT_C  shift, and go to state 48
    INT_C    shift, and go to state 49
    ID       shift, and go to state 26
    '-'      shift, and go to state 50
    '!'      shift, and go to state 51
    '('      shift, and go to state 52

    expression        go to state 61
    variable          go to state 54
    constructor_call  go to state 55
    type              go to state 56
    function_call     go to state 57
    function_name     go to state 58


State 40

    5 declaration: type ID ';' .

    $default  reduce using rule 5 (declaration)


State 41

    6 declaration: type ID '=' . expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 43
    TRUE_C   shift, and go to state 44
    DP3_F    shift, and go to state 45
    LIT_F    shift, and go to state 46
    RSQ_F    shift, and go to state 47
    VEC2_T   shift, and go to state 10
    VEC3_T   shift, and go to state 11
    VEC4_T   shift, and go to state 12
    IVEC2_T  shift, and go to state 13
    IVEC3_T  shift, and go to state 14
    IVEC4_T  shift, and go to state 15
    BVEC2_T  shift, and go to state 16
    BVEC3_T  shift, and go to state 17
    BVEC4_T  shift, and go to state 18
    FLOAT_C  shift, and go to state 48
    INT_C    shift, and go to state 49
    ID       shift, and go to state 26
    '-'      shift, and go to state 50
    '!'      shift, and go to state 51
    '('      shift, and go to state 52

    expression        go to state 62
    variable          go to state 54
    constructor_call  go to state 55
    type              go to state 56
    function_call     go to state 57
    function_name     go to state 58


State 42

    7 declaration: CONST type ID '=' . expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 43
    TRUE_C   shift, and go to state 44
    DP3_F    shift, and go to state 45
    LIT_F    shift, and go to state 46
    RSQ_F    shift, and go to state 47
    VEC2_T   shift, and go to state 10
    VEC3_T   shift, and go to state 11
    VEC4_T   shift, and go to state 12
    IVEC2_T  shift, and go to state 13
    IVEC3_T  shift, and go to state 14
    IVEC4_T  shift, and go to state 15
    BVEC2_T  shift, and go to state 16
    BVEC3_T  shift, and go to state 17
    BVEC4_T  shift, and go to state 18
    FLOAT_C  shift, and go to state 48
    INT_C    shift, and go to state 49
    ID       shift, and go to state 26
    '-'      shift, and go to state 50
    '!'      shift, and go to state 51
    '('      shift, and go to state 52

    expression        go to state 63
    variable          go to state 54
    constructor_call  go to state 55
    type              go to state 56
    function_call     go to state 57
    function_name     go to state 58


State 43

   35 expression: FALSE_C .

    $default  reduce using rule 35 (expression)


State 44

   34 expression: TRUE_C .

    $default  reduce using rule 34 (expression)


State 45

   65 function_name: DP3_F .

    $default  reduce using rule 65 (function_name)


State 46

   66 function_name: LIT_F .

    $default  reduce using rule 66 (function_name)


State 47

   67 function_name: RSQ_F .

    $default  reduce using rule 67 (function_name)


State 48

   27 expression: FLOAT_C .

    $default  reduce using rule 27 (expression)


State 49

   26 expression: INT_C .

    $default  reduce using rule 26 (expression)


State 50

   28 expression: '-' . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 43
    TRUE_C   shift, and go to state 44
    DP3_F    shift, and go to state 45
    LIT_F    shift, and go to state 46
    RSQ_F    shift, and go to state 47
    VEC2_T   shift, and go to state 10
    VEC3_T   shift, and go to state 11
    VEC4_T   shift, and go to state 12
    IVEC2_T  shift, and go to state 13
    IVEC3_T  shift, and go to state 14
    IVEC4_T  shift, and go to state 15
    BVEC2_T  shift, and go to state 16
    BVEC3_T  shift, and go to state 17
    BVEC4_T  shift, and go to state 18
    FLOAT_C  shift, and go to state 48
    INT_C    shift, and go to state 49
    ID       shift, and go to state 26
    '-'      shift, and go to state 50
    '!'      shift, and go to state 51
    '('      shift, and go to state 52

    expression        go to state 64
    variable          go to state 54
    constructor_call  go to state 55
    type              go to state 56
    function_call     go to state 57
    function_name     go to state 58


State 51

   36 expression: '!' . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 43
    TRUE_C   shift, and go to state 44
    DP3_F    shift, and go to state 45
    LIT_F    shift, and go to state 46
    RSQ_F    shift, and go to state 47
    VEC2_T   shift, and go to state 10
    VEC3_T   shift, and go to state 11
    VEC4_T   shift, and go to state 12
    IVEC2_T  shift, and go to state 13
    IVEC3_T  shift, and go to state 14
    IVEC4_T  shift, and go to state 15
    BVEC2_T  shift, and go to state 16
    BVEC3_T  shift, and go to state 17
    BVEC4_T  shift, and go to state 18
    FLOAT_C  shift, and go to state 48
    INT_C    shift, and go to state 49
    ID       shift, and go to state 26
    '-'      shift, and go to state 50
    '!'      shift, and go to state 51
    '('      shift, and go to state 52

    expression        go to state 65
    variable          go to state 54
    constructor_call  go to state 55
    type              go to state 56
    function_call     go to state 57
    function_name     go to state 58


State 52

   45 expression: '(' . expression ')'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 43
    TRUE_C   shift, and go to state 44
    DP3_F    shift, and go to state 45
    LIT_F    shift, and go to state 46
    RSQ_F    shift, and go to state 47
    VEC2_T   shift, and go to state 10
    VEC3_T   shift, and go to state 11
    VEC4_T   shift, and go to state 12
    IVEC2_T  shift, and go to state 13
    IVEC3_T  shift, and go to state 14
    IVEC4_T  shift, and go to state 15
    BVEC2_T  shift, and go to state 16
    BVEC3_T  shift, and go to state 17
    BVEC4_T  shift, and go to state 18
    FLOAT_C  shift, and go to state 48
    INT_C    shift, and go to state 49
    ID       shift, and go to state 26
    '-'      shift, and go to state 50
    '!'      shift, and go to state 51
    '('      shift, and go to state 52

    expression        go to state 66
    variable          go to state 54
    constructor_call  go to state 55
    type              go to state 56
    function_call     go to state 57
    function_name     go to state 58


State 53

   15 statement_open: WHILE '(' expression . ')' statement_open
   18 statement_closed: WHILE '(' expression . ')' statement_closed
   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   33           | expression . '^' expression
   37           | expression . AND expression
   38           | expression . OR expression
   39           | expression . EQ expression
   40           | expression . NEQ expression
   41           | expression . '<' expression
   42           | expression . LEQ expression
   43           | expression . '>' expression
   44           | expression . GEQ expression

    AND  shift, and go to state 67
    OR   shift, and go to state 68
    NEQ  shift, and go to state 69
    EQ   shift, and go to state 70
    LEQ  shift, and go to state 71
    GEQ  shift, and go to state 72
    '<'  shift, and go to state 73
    '>'  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '^'  shift, and go to state 79
    ')'  shift, and go to state 80


State 54

   46 expression: variable .

    $default  reduce using rule 46 (expression)


State 55

   47 expression: constructor_call .

    $default  reduce using rule 47 (expression)


State 56

   51 constructor_call: type . '(' arguments_opt ')'

    '('  shift, and go to state 81


State 57

   48 expression: function_call .

    $default  reduce using rule 48 (expression)


State 58

   64 function_call: function_name . '(' arguments_opt ')'

    '('  shift, and go to state 82


State 59

   13 statement_open: IF '(' expression . ')' statement
   14               | IF '(' expression . ')' statement_closed ELSE statement_open
   19 statement_closed: IF '(' expression . ')' statement_closed ELSE statement_closed
   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   33           | expression . '^' expression
   37           | expression . AND expression
   38           | expression . OR expression
   39           | expression . EQ expression
   40           | expression . NEQ expression
   41           | expression . '<' expression
   42           | expression . LEQ expression
   43           | expression . '>' expression
   44           | expression . GEQ expression

    AND  shift, and go to state 67
    OR   shift, and go to state 68
    NEQ  shift, and go to state 69
    EQ   shift, and go to state 70
    LEQ  shift, and go to state 71
    GEQ  shift, and go to state 72
    '<'  shift, and go to state 73
    '>'  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '^'  shift, and go to state 79
    ')'  shift, and go to state 83


State 60

   50 variable: ID '[' INT_C . ']'

    ']'  shift, and go to state 84


State 61

   16 statement_closed: variable '=' expression . ';'
   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   33           | expression . '^' expression
   37           | expression . AND expression
   38           | expression . OR expression
   39           | expression . EQ expression
   40           | expression . NEQ expression
   41           | expression . '<' expression
   42           | expression . LEQ expression
   43           | expression . '>' expression
   44           | expression . GEQ expression

    AND  shift, and go to state 67
    OR   shift, and go to state 68
    NEQ  shift, and go to state 69
    EQ   shift, and go to state 70
    LEQ  shift, and go to state 71
    GEQ  shift, and go to state 72
    '<'  shift, and go to state 73
    '>'  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '^'  shift, and go to state 79
    ';'  shift, and go to state 85


State 62

    6 declaration: type ID '=' expression . ';'
   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   33           | expression . '^' expression
   37           | expression . AND expression
   38           | expression . OR expression
   39           | expression . EQ expression
   40           | expression . NEQ expression
   41           | expression . '<' expression
   42           | expression . LEQ expression
   43           | expression . '>' expression
   44           | expression . GEQ expression

    AND  shift, and go to state 67
    OR   shift, and go to state 68
    NEQ  shift, and go to state 69
    EQ   shift, and go to state 70
    LEQ  shift, and go to state 71
    GEQ  shift, and go to state 72
    '<'  shift, and go to state 73
    '>'  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '^'  shift, and go to state 79
    ';'  shift, and go to state 86


State 63

    7 declaration: CONST type ID '=' expression . ';'
   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   33           | expression . '^' expression
   37           | expression . AND expression
   38           | expression . OR expression
   39           | expression . EQ expression
   40           | expression . NEQ expression
   41           | expression . '<' expression
   42           | expression . LEQ expression
   43           | expression . '>' expression
   44           | expression . GEQ expression

    AND  shift, and go to state 67
    OR   shift, and go to state 68
    NEQ  shift, and go to state 69
    EQ   shift, and go to state 70
    LEQ  shift, and go to state 71
    GEQ  shift, and go to state 72
    '<'  shift, and go to state 73
    '>'  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '^'  shift, and go to state 79
    ';'  shift, and go to state 87


State 64

   28 expression: '-' expression .
   29           | expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   33           | expression . '^' expression
   37           | expression . AND expression
   38           | expression . OR expression
   39           | expression . EQ expression
   40           | expression . NEQ expression
   41           | expression . '<' expression
   42           | expression . LEQ expression
   43           | expression . '>' expression
   44           | expression . GEQ expression

    $default  reduce using rule 28 (expression)


State 65

   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   33           | expression . '^' expression
   36           | '!' expression .
   37           | expression . AND expression
   38           | expression . OR expression
   39           | expression . EQ expression
   40           | expression . NEQ expression
   41           | expression . '<' expression
   42           | expression . LEQ expression
   43           | expression . '>' expression
   44           | expression . GEQ expression

    $default  reduce using rule 36 (expression)


State 66

   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   33           | expression . '^' expression
   37           | expression . AND expression
   38           | expression . OR expression
   39           | expression . EQ expression
   40           | expression . NEQ expression
   41           | expression . '<' expression
   42           | expression . LEQ expression
   43           | expression . '>' expression
   44           | expression . GEQ expression
   45           | '(' expression . ')'

    AND  shift, and go to state 67
    OR   shift, and go to state 68
    NEQ  shift, and go to state 69
    EQ   shift, and go to state 70
    LEQ  shift, and go to state 71
    GEQ  shift, and go to state 72
    '<'  shift, and go to state 73
    '>'  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '^'  shift, and go to state 79
    ')'  shift, and go to state 88


State 67

   37 expression: expression AND . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 43
    TRUE_C   shift, and go to state 44
    DP3_F    shift, and go to state 45
    LIT_F    shift, and go to state 46
    RSQ_F    shift, and go to state 47
    VEC2_T   shift, and go to state 10
    VEC3_T   shift, and go to state 11
    VEC4_T   shift, and go to state 12
    IVEC2_T  shift, and go to state 13
    IVEC3_T  shift, and go to state 14
    IVEC4_T  shift, and go to state 15
    BVEC2_T  shift, and go to state 16
    BVEC3_T  shift, and go to state 17
    BVEC4_T  shift, and go to state 18
    FLOAT_C  shift, and go to state 48
    INT_C    shift, and go to state 49
    ID       shift, and go to state 26
    '-'      shift, and go to state 50
    '!'      shift, and go to state 51
    '('      shift, and go to state 52

    expression        go to state 89
    variable          go to state 54
    constructor_call  go to state 55
    type              go to state 56
    function_call     go to state 57
    function_name     go to state 58


State 68

   38 expression: expression OR . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 43
    TRUE_C   shift, and go to state 44
    DP3_F    shift, and go to state 45
    LIT_F    shift, and go to state 46
    RSQ_F    shift, and go to state 47
    VEC2_T   shift, and go to state 10
    VEC3_T   shift, and go to state 11
    VEC4_T   shift, and go to state 12
    IVEC2_T  shift, and go to state 13
    IVEC3_T  shift, and go to state 14
    IVEC4_T  shift, and go to state 15
    BVEC2_T  shift, and go to state 16
    BVEC3_T  shift, and go to state 17
    BVEC4_T  shift, and go to state 18
    FLOAT_C  shift, and go to state 48
    INT_C    shift, and go to state 49
    ID       shift, and go to state 26
    '-'      shift, and go to state 50
    '!'      shift, and go to state 51
    '('      shift, and go to state 52

    expression        go to state 90
    variable          go to state 54
    constructor_call  go to state 55
    type              go to state 56
    function_call     go to state 57
    function_name     go to state 58


State 69

   40 expression: expression NEQ . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 43
    TRUE_C   shift, and go to state 44
    DP3_F    shift, and go to state 45
    LIT_F    shift, and go to state 46
    RSQ_F    shift, and go to state 47
    VEC2_T   shift, and go to state 10
    VEC3_T   shift, and go to state 11
    VEC4_T   shift, and go to state 12
    IVEC2_T  shift, and go to state 13
    IVEC3_T  shift, and go to state 14
    IVEC4_T  shift, and go to state 15
    BVEC2_T  shift, and go to state 16
    BVEC3_T  shift, and go to state 17
    BVEC4_T  shift, and go to state 18
    FLOAT_C  shift, and go to state 48
    INT_C    shift, and go to state 49
    ID       shift, and go to state 26
    '-'      shift, and go to state 50
    '!'      shift, and go to state 51
    '('      shift, and go to state 52

    expression        go to state 91
    variable          go to state 54
    constructor_call  go to state 55
    type              go to state 56
    function_call     go to state 57
    function_name     go to state 58


State 70

   39 expression: expression EQ . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 43
    TRUE_C   shift, and go to state 44
    DP3_F    shift, and go to state 45
    LIT_F    shift, and go to state 46
    RSQ_F    shift, and go to state 47
    VEC2_T   shift, and go to state 10
    VEC3_T   shift, and go to state 11
    VEC4_T   shift, and go to state 12
    IVEC2_T  shift, and go to state 13
    IVEC3_T  shift, and go to state 14
    IVEC4_T  shift, and go to state 15
    BVEC2_T  shift, and go to state 16
    BVEC3_T  shift, and go to state 17
    BVEC4_T  shift, and go to state 18
    FLOAT_C  shift, and go to state 48
    INT_C    shift, and go to state 49
    ID       shift, and go to state 26
    '-'      shift, and go to state 50
    '!'      shift, and go to state 51
    '('      shift, and go to state 52

    expression        go to state 92
    variable          go to state 54
    constructor_call  go to state 55
    type              go to state 56
    function_call     go to state 57
    function_name     go to state 58


State 71

   42 expression: expression LEQ . expression
